syntax = "proto3";

package pb;

option go_package = "pb/";

message TourReq {
  string tour_id = 1;
}

message TourResp {
  string tour_id = 1;
  string name = 2;
  string description = 3;
  string host_id = 4;
  int32 slot = 5;
  int32 available_slot = 6;
  string status = 7;
  string start_at = 8;
  string end_at = 9;
  int32 price = 10;
}

message AvailableSlotReq {
  string tour_id = 1;
  int32 lockedSlot = 2;
}

message AvailableSlotResp {
  string tour_id = 1;
  string name = 2;
  string description = 3;
  string host_id = 4;
  int32 slot = 5;
  int32 available_slot = 6;
  string status = 7;
  string start_at = 8;
  string end_at = 9;
  int32 price = 10;
}

service TourService {
  rpc CheckTourExist(TourReq) returns (TourResp);
  rpc UpdateTourAvailableSlot(AvailableSlotReq) returns (AvailableSlotResp);
}
